--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,11 @@ body {
   color: var(--text);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@media (min-width: 1024px) {
+  .bg-desktop {
+    background-image: url('./assets/bg-card.jpg');
+    background-size: cover;
+    background-position: center;
+  }
+}
